--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
         <!-- Sign Up Activity -->
         <activity
             android:name=".ui.activity.SignUpActivity"
-            android:label="@string/title_sign_up">
+            android:label="@string/app_name"
+            android:theme="@style/SignUpTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -32,13 +32,14 @@
         <!-- Login Activity -->
         <activity
             android:name=".ui.activity.LoginActivity"
-            android:label="@string/title_login">
+            android:label="@string/title_login"
+            android:theme="@style/SignUpTheme">
         </activity>
 
         <!-- Bloquery Activity -->
         <activity
             android:name=".ui.activity.BloqueryActivity"
-            android:label="@string/title_bloquery">
+            android:label="@string/app_name">
         </activity>
 
         <!-- Single Question Activity -->
