--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.namclu.android.bloquery"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.namclu.android.bloquery">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-                     android:maxSdkVersion="18"/>
-    <uses-feature android:name="android.hardware.camera2"
-                  android:required="true"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -23,49 +26,50 @@
             android:name=".ui.activity.SignUpActivity"
             android:label="@string/app_name"
             android:theme="@style/SignUpTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
 
         <!-- Login Activity -->
         <activity
             android:name=".ui.activity.LoginActivity"
             android:label="@string/title_login"
-            android:theme="@style/SignUpTheme">
-        </activity>
+            android:theme="@style/SignUpTheme"></activity>
 
         <!-- Bloquery Activity -->
         <activity
             android:name=".ui.activity.BloqueryActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
 
         <!-- Single Question Activity -->
         <activity
             android:name=".ui.activity.SingleQuestionActivity"
             android:label="@string/title_single_question"
-            android:parentActivityName=".ui.activity.BloqueryActivity">
-        </activity>
+            android:parentActivityName=".ui.activity.BloqueryActivity"></activity>
 
         <!-- User Profile Activity -->
         <activity
             android:name=".ui.activity.UserProfileActivity"
             android:label="@string/title_user_profile"
-            android:parentActivityName=".ui.activity.BloqueryActivity">
-        </activity>
+            android:parentActivityName=".ui.activity.BloqueryActivity"></activity>
 
         <!-- Configure the FileProvider -->
         <provider
-            android:authorities="com.namclu.android.bloquery"
             android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.namclu.android.bloquery"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
+
+        <activity android:name=".ui.activity.SplashActivity"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
