--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,13 @@ dependencies {
     implementation 'junit:junit:4.12'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.github.rubensousa:bottomsheetbuilder:1.6.1'
-
+    implementation('com.airbnb.android:lottie:2.7.0') {
+        exclude group: 'com.android.support', module: 'support-v7'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'recyclerview'
+        exclude group: 'com.android.support', module: 'transition'
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
